--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/hiteshathwal88-sys/children-day-celebration",
+  "homepage": "https://hiteshathwal.github.io/children-day-celebration",
   "name": "children-day-celebration",
   "version": "0.1.0",
   "private": true,
@@ -11,7 +11,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.5",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
